--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="logo">Rentalys.id</div>
       <div class="menu">
         <!-- Menggunakan link untuk pengalihan ke regis.html -->
-        <a href="../Registrasi/regis.html">
+        <a href="regis.html">
           <button class="btn scale-up">Daftar</button>
         </a>
         <button class="btn btn-outline scale-up">Login</button>
