--- a/regis.html
+++ b/regis.html
@@ -36,7 +36,7 @@
         <!-- Tombol Daftar -->
         <button type="submit" class="btn scale-up">Daftar</button>
       </form>
-      <p class="redirect">Sudah punya akun? <a href="../LandingPage/index.html">Login di sini</a></p>
+      <p class="redirect">Sudah punya akun? <a href="index.html">Login di sini</a></p>
     </div>
   </div>
 </body>
