--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
       <div class="logo">Rentalys.id</div>
       <div class="menu">
         <!-- Menggunakan link untuk pengalihan ke regis.html -->
-        <a href="regis.html">
+        <a href="../Registrasi/regis.html">
           <button class="btn scale-up">Daftar</button>
         </a>
-        <button class="btn btn-outline scale-up">Login</button>
+        <!-- Mengarahkan ke halaman login.html -->
+        <a href="../Login/login.html">
+          <button class="btn btn-outline scale-up">Login</button>
+        </a>
       </div>
     </header>
 
