--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div class="logo">Rentalys.id</div>
       <div class="menu">
         <!-- Menggunakan link untuk pengalihan ke regis.html -->
-        <a href="../Registrasi/regis.html">
+        <a href="regis.html">
           <button class="btn scale-up">Daftar</button>
         </a>
         <!-- Mengarahkan ke halaman login.html -->
-        <a href="../Login/login.html">
+        <a href="login.html">
           <button class="btn btn-outline scale-up">Login</button>
         </a>
       </div>
