--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="content">
         <h1 class="fade-in">RENTAL BAJU COSPLAY</h1>
         <p class="fade-in">Pilih baju, klik, dan bayar, semudah itu!</p>
-        <button class="btn scale-up">Ayo Mulai</button>
+        <button class="btn scale-up" onclick="location.href='dashboard.html'">Ayo Mulai</button>
       </div>
       <div class="illustration fade-in">
         <img src="superhero.png" alt="Ilustrasi">
