--- a/dashboard.html
+++ b/dashboard.html
@@ -28,22 +28,22 @@
     <!-- Image Collage -->
     <div class="gallery">
       <div class="gallery-item">
-        <img src="cos1.jpg" alt="Cosplay 1">
+        <img src="cos1.jpg" alt="Baju Cosplay 1">
       </div>
       <div class="gallery-item">
-        <img src="cos2.jpg" alt="Cosplay 2">
+        <img src="cos2.jpg" alt="Baju Cosplay 2">
       </div>
       <div class="gallery-item">
-        <img src="cos3.jpg" alt="Cosplay 3">
+        <img src="cos3.jpg" alt="Baju Cosplay 3">
       </div>
       <div class="gallery-item">
-        <img src="cos4.jpg" alt="Cosplay 4">
+        <img src="cos4.jpg" alt="Baju Cosplay 4">
       </div>
       <div class="gallery-item">
-        <img src="cos5.jpg" alt="Cosplay 5">
+        <img src="cos5.jpg" alt="Baju Cosplay 5">
       </div>
       <div class="gallery-item">
-        <img src="cos6.jpg" alt="Cosplay 6">
+        <img src="cos6.jpg" alt="Baju Cosplay 6">
       </div>
     </div>
   </div>
