--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div class="logo">Rentalys.id</div>
       <div class="menu">
         <!-- Menggunakan link untuk pengalihan ke regis.html -->
-        <a href="../Registrasi/regis.html">
+        <a href="regis.html">
           <button class="btn scale-up">Daftar</button>
         </a>
         <!-- Mengarahkan ke halaman login.html -->
-        <a href="../Login/login.html">
+        <a href="login.html">
           <button class="btn btn-outline scale-up">Login</button>
         </a>
       </div>
@@ -30,7 +30,7 @@
       <div class="content">
         <h1 class="fade-in">RENTAL BAJU COSPLAY</h1>
         <p class="fade-in">Pilih baju, klik, dan bayar, semudah itu!</p>
-        <button class="btn scale-up" onclick="location.href='../Dashboard/dashboard.html'">Ayo Mulai</button>
+        <button class="btn scale-up" onclick="location.href='dashboard.html'">Ayo Mulai</button>
       </div>
       <div class="illustration fade-in">
         <img src="superhero.png" alt="Ilustrasi">
